--- a/index.html
+++ b/index.html
@@ -23,7 +23,39 @@
 
 <body>
     <!-- Main header -->
-    <header class="bg-primary" id="main-header">main header</header>
+    <header id="main-header" class="d-flex align-items-center">
+        <img src="img/mobile-logo.png" alt="mobile-logo" class="d-lg-none logo-mobile">
+        <img src="img/logo.svg" alt="logo" class="d-none d-lg-block logo mx-3">
+        <div class="input-group px-3">
+            <button class="btn btn-outline-secondary" type="button" id="button-addon1"><i
+                    class="bi bi-search"></i></button>
+            <input type="text" class="form-control" placeholder="Prova a cercare: Lezioni di Laravel"
+                aria-label="Example text with button addon" aria-describedby="button-addon1">
+        </div>
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#"><i class="bi bi-list-ul"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#"><i class="bi bi-question-circle-fill"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#"><i class="bi bi-three-dots-vertical"></i></a>
+                        </li>
+
+                    </ul>
+                </div>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link bell" href="#"><i class="bi bi-bell-fill"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 
     <!-- Bottom content -->
     <div class="content-bottom d-flex">
