--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap Dashboard</title>
 
+    <!-- Fontawesome -->
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css'
+        integrity='sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=='
+        crossorigin='anonymous'>
+
     <!-- Bootstrap icons -->
     <link rel='stylesheet'
         href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.2/font/bootstrap-icons.min.css'
@@ -19,6 +24,10 @@
 
     <!-- CSS style sheet -->
     <link rel="stylesheet" href="css/style.css">
+
+    <!-- Responsive sheet -->
+    <link rel="stylesheet" href="css/responsive.css">
+
 </head>
 
 <body>
@@ -61,7 +70,35 @@
     <div class="content-bottom d-flex">
 
         <!-- Sidebar -->
-        <div class="sidebar bg-dark text-white">sidebar</div>
+        <div class="sidebar text-white d-flex flex-column justify-content-between py-4">
+            <ul class="nav flex-column sidebar-top">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">
+                        <i class="fa-solid fa-house"></i>
+                        <span class="sidebar-icon-name d-none d-lg-inline">Home</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        <i class="fa-solid fa-chart-simple"></i>
+                        <span class="sidebar-icon-name d-none d-lg-inline">Stats</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="fa-solid fa-signal"></i>
+                        <span class="sidebar-icon-name d-none d-lg-inline">Signals</span>
+                    </a>
+                </li>
+
+            </ul>
+            <ul class="nav flex-column sidebar-bottom">
+                <li class="nav-item">
+                    <a class="nav-link"><i class="fa-solid fa-gear"></i>
+                        <span class="sidebar-icon-name d-none d-lg-inline">Admin</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
 
         <!-- Main -->
         <main class="flex-grow-1">
