--- a/index.html
+++ b/index.html
@@ -104,7 +104,67 @@
         <main class="flex-grow-1">
 
             <!-- Secondary header -->
-            <header class="secondary-header bg-danger">secondary header</header>
+            <header
+                class="secondary-header d-flex flex-column text-white px-3 py-4 row-gap-2 flex-md-row justify-content-between">
+
+                <div class="header-item order-md-1">
+                    <span>Nuovo studente</span>
+                    <button class="btn border border-white rounded" type="button" data-bs-toggle="offcanvas"
+                        data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
+                        <i class="bi bi-plus-lg fw-bold"></i>
+                    </button>
+
+                    <!-- Offcanvas -->
+                    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasExample"
+                        aria-labelledby="offcanvasExampleLabel">
+                        <div class="offcanvas-header">
+                            <h5 class="offcanvas-title" id="offcanvasExampleLabel">Offcanvas</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="offcanvas"
+                                aria-label="Close"></button>
+                        </div>
+                        <div class="offcanvas-body">
+                            <div>
+                                Some text as placeholder. In real life you can have the elements you have chosen. Like,
+                                text, images, lists, etc.
+                            </div>
+                            <div class="dropdown mt-3">
+                                <button class="btn btn-secondary dropdown-toggle" type="button"
+                                    data-bs-toggle="dropdown">
+                                    Dropdown button
+                                </button>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="#">Action</a></li>
+                                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Fine offcanvas -->
+
+                </div>
+
+
+                <div class="header-item">
+                    <h2 class="d-inline-block">Boolean</h2>
+                    <span class="badge rounded-pill">Piano blaze</span>
+                    <nav>
+                        <ul class="d-flex gap-1 p-0">
+                            <li class="badge rounded-pill"><a href="#">3 app</a></li>
+                            <li class="list-unstyled"><i class="fa-solid fa-angles-right"></i></li>
+                            <li class="badge rounded-pill d-lg-none"><a href="#">+</a></li>
+                            <li class="badge rounded-pill d-none d-lg-block"><a href="#">Boolean mobile app</a></li>
+                            <li class="badge rounded-pill d-none d-lg-block"><a href="#">Boolean web app</a></li>
+                            <li class="badge rounded-pill d-none d-lg-block"><a href="#">Boolean blog</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="header-item">
+                    <span>Studenti in visita negli ultimi 30 minuti</span>
+                    <span class="d-block fs-2">125</span>
+                </div>
+
+            </header>
 
             <!-- Main content -->
             <div class="main-content h-75 container-fluid">
@@ -134,6 +194,10 @@
         </main>
     </div>
 
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
