--- a/index.html
+++ b/index.html
@@ -170,7 +170,9 @@
             <div class="main-content h-75 container-fluid py-3">
                 <div class="row">
                     <div class="col-12 col-lg-8">
-                        <section id="classes">
+
+                        <!-- Section classes -->
+                        <section id="classes" class="mb-3">
                             <div class="card">
                                 <h5 class="card-header">Prossime classi</h5>
                                 <div class="card-body overflow-x-auto">
@@ -450,7 +452,9 @@
                                 </div>
                             </div>
                         </section>
-                        <section id="faq">
+
+                        <!-- Section faq -->
+                        <section id="faq" class="mb-3">
                             <div class="card">
                                 <h5 class="card-header">F.A.Q.</h5>
                                 <div class="card-body">
@@ -507,14 +511,56 @@
                             </div>
                         </section>
                     </div>
+
+
                     <div class="col-12 col-lg-4">
-                        <section id="todo">
-                            <h2>Todo</h2>
-                            <div>content</div>
+
+                        <!-- Section todo -->
+                        <section id="todo" class="mb-3">
+                            <div class="card">
+                                <h5 class="card-header">Todo</h5>
+                                <div class="card-body">
+                                    <ul class="list-group">
+                                        <li class="list-group-item">
+                                            <input class="form-check-input me-1" type="checkbox" value=""
+                                                id="firstCheckbox">
+                                            <label class="form-check-label" for="firstCheckbox">Kickoff nuove
+                                                classi</label>
+                                        </li>
+                                        <li class="list-group-item">
+                                            <input class="form-check-input me-1" type="checkbox" value=""
+                                                id="secondCheckbox">
+                                            <label class="form-check-label" for="secondCheckbox">Lezione su Bootstrap 5
+                                                in classe #75</label>
+                                        </li>
+                                        <li class="list-group-item">
+                                            <input class="form-check-input me-1" type="checkbox" value=""
+                                                id="thirdCheckbox">
+                                            <label class="form-check-label" for="thirdCheckbox">Controllare username
+                                                github studenti</label>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
                         </section>
+
+                        <!-- Section graph -->
                         <section id="graph">
-                            <div>img</div>
-                            <div>some content</div>
+                            <div class="card">
+                                <img src="img/stats.jpeg" class="card-img-top" alt="stats">
+                                <div class="card-body">
+                                    <h5 class="card-title">Utenti attivi</h5>
+                                    <p class="card-text">Lista degli utenti attivi in piattaforma nell'ultimo mese</p>
+                                </div>
+                                <ul class="list-group list-group-flush">
+                                    <li class="list-group-item">Gennaio: 1200</li>
+                                    <li class="list-group-item">Febbraio: 800</li>
+                                    <li class="list-group-item">Marzo: 1500</li>
+                                </ul>
+                                <div class="card-body">
+                                    <a href="#" class="card-link">Visualizza report approfondito</a>
+                                </div>
+                            </div>
                         </section>
                     </div>
                 </div>
