--- a/index.html
+++ b/index.html
@@ -59,7 +59,24 @@
                 </div>
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link bell" href="#"><i class="bi bi-bell-fill"></i></a>
+                        <div class="dropdown">
+                            <a class="nav-link bell btn btn-secondary dropdown-toggle" href="#" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="bi bi-bell-fill"></i>
+                            </a>
+
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <a href="#" class="dropdown-item">Profilo</a>
+                                </li>
+                                <li>
+                                    <a href="#" class="dropdown-item">Fatturazione</a>
+                                </li>
+                                <li>
+                                    <a href="#" class="dropdown-item">Logout</a>
+                                </li>
+                            </ul>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -222,7 +239,7 @@
                                 <div class="card-body overflow-x-auto">
 
                                     <!-- Table -->
-                                    <table>
+                                    <table id="classes-table">
                                         <thead>
                                             <tr>
                                                 <th class="first-col">Nome</th>
