--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <div class="dropdown">
                             <a class="nav-link bell btn btn-secondary dropdown-toggle" href="#" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
-                                <i class="bi bi-bell-fill"></i>
+                                <i class="fa-solid fa-bell fa-shake"></i>
                             </a>
 
                             <ul class="dropdown-menu">
@@ -91,18 +91,18 @@
             <ul class="nav flex-column sidebar-top">
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">
-                        <i class="fa-solid fa-house"></i>
+                        <i class="fa-solid fa-house fa-beat"></i>
                         <span class="sidebar-icon-name d-none d-lg-inline">Home</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">
-                        <i class="fa-solid fa-chart-simple"></i>
+                        <i class="fa-solid fa-chart-simple fa-beat"></i>
                         <span class="sidebar-icon-name d-none d-lg-inline">Stats</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fa-solid fa-signal"></i>
+                    <a class="nav-link" href="#"><i class="fa-solid fa-signal fa-beat"></i>
                         <span class="sidebar-icon-name d-none d-lg-inline">Signals</span>
                     </a>
                 </li>
@@ -110,7 +110,7 @@
             </ul>
             <ul class="nav flex-column sidebar-bottom">
                 <li class="nav-item">
-                    <a class="nav-link"><i class="fa-solid fa-gear"></i>
+                    <a class="nav-link"><i class="fa-solid fa-gear fa-spin"></i>
                         <span class="sidebar-icon-name d-none d-lg-inline">Admin</span>
                     </a>
                 </li>
